tests/golden/error/private_fn_access/main.tg
// Test: E0016 private function access from another module.

mod helper;

fn main() -> Nat {
    helper::private_fn()
}
